--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true"
+            android:exported="true" />
+
+        <receiver
+            android:name=".NotificationReceiver"
+            android:enabled="true"
             android:exported="true"></receiver>
 
         <activity
